Revision history for {{$dist->name}}

{{$NEXT}}

0.005     2019-06-04 13:51:56+08:00 Asia/Kuala_Lumpur
    New features:

    - support parameters for ->board, thanks to Bill Marriott (https://github.com/team-at-cpan/Net-Async-Trello/pull/3)

0.004     2019-02-06 00:02:02+08:00 Asia/Kuala_Lumpur
    No new features.

    Bugs fixed:

    - UTF-8 encoding was not correctly preserved on text

0.003     2018-12-21 12:40:11+08:00 Asia/Kuala_Lumpur
    New features:

    - card updates
    - default to visible cards and increase the limit for `::Board->cards`

    Bugs fixed:

    - no need to connect to websocket endpoint unless requested

0.002     2017-10-28 23:22:37+08:00 Asia/Kuala_Lumpur
    No new features.

    Bugs fixed:

    * Websocket support should now work with the upstream version of Net::Async::WebSocket

0.001     2017-05-11 20:47:59+08:00 Asia/Kuala_Lumpur
	* Initial release
