@@ -56,3 +56,10 @@ sub update {
 
 1;
 
+=head1 AUTHOR
+
+Tom Molesworth <TEAM@cpan.org>
+
+=head1 LICENSE
+
+Copyright Tom Molesworth 2014-2019. Licensed under the same terms as Perl itself.
