@@ -20,7 +20,7 @@ Autogenerated module.
 sub cards {
 	my ($self, %args) = @_;
     $self->trello->api_get_list(
-		uri => 'lists/' . $self->id . '/cards',
+		uri => 'lists/' . $self->id . '/cards?cards=all',
         class => 'Net::Async::Trello::Card',
         extra => {
             list  => $self,
