@@ -1,6 +1,10 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+    New features:
+
+    - ->member method for retrieving information about a specific person
+    - the ::Card->history method now returns proper ::CardAction instances, hopefully making it more useful
 
 0.005     2019-06-04 13:51:56+08:00 Asia/Kuala_Lumpur
     New features:
